# voxfing

./: Cargo.toml  Makefile  README.md
src/: ascii.rs  birch.rs  file_io.rs  isim.rs  lib.rs  utils.rs  voxel.rs
test_files/: one.mol2  two.mol2
