[package]
name = "voxbirch"
version = "0.1.0"
edition = "2021"
description = "What your CLI does"
license = "MIT"
repository = "https://github.com/Pakman450/voxfing"

[[bin]]
name = "voxbirch"
path = "src/bin/voxbirch.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.2", features = ["derive"] }
nalgebra = "0.32"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"